--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@playwright/test": "^1.44.1",
     "better-sqlite3": "^11.0.0",
+    "chalk": "^5.3.0",
     "drizzle-orm": "^0.31.0",
     "pdfjs-dist": "^4.3.136",
     "tsx": "^4.11.2"
