--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
   "type": "module",
   "scripts": {
-    "install-playwright": "bunx playwright install chrome",
+    "playwright": "npx playwright install chrome",
     "start": "tsx ./run.ts",
-    "studio": "bunx drizzle-kit studio",
-    "clean": "rm -rf node_modules bun.lockb && bun install"
+    "explore": "open '/Applications/Beekeeper Studio.app' --args $(pwd)/database/local.db",
+    "clean": "rm -rf node_modules yarn.lock && yarn cache clean && yarn install"
   },
   "dependencies": {
     "@playwright/test": "^1.44.1",
     "better-sqlite3": "^11.0.0",
     "chalk": "^5.3.0",
-    "drizzle-orm": "^0.31.0",
+    "kysely": "^0.27.3",
+    "lodash-es": "^4.17.21",
     "pdfjs-dist": "^4.3.136",
     "tsx": "^4.11.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.10",
-    "@types/node": "^20.14.1",
-    "drizzle-kit": "^0.22.1"
+    "@types/lodash": "^4.17.4",
+    "@types/node": "^20.14.1"
   }
 }
