--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "playwright": "npx playwright install chrome",
     "start": "tsx ./run.ts",
     "explore": "open '/Applications/Beekeeper Studio.app' --args $(pwd)/database/local.db",
+    "lint": "FIX=true ./lint.sh",
+    "test:lint": "./lint.sh",
     "clean": "rm -rf node_modules yarn.lock && yarn cache clean && yarn install"
   },
   "dependencies": {
@@ -13,11 +15,19 @@
     "kysely": "^0.27.3",
     "lodash-es": "^4.17.21",
     "pdfjs-dist": "^4.3.136",
-    "tsx": "^4.11.2"
+    "tsx": "^4.15.2"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/better-sqlite3": "^7.6.10",
-    "@types/lodash": "^4.17.4",
-    "@types/node": "^20.14.1"
+    "@types/lodash": "^4.17.5",
+    "@types/node": "^20.14.2",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
+    "prettier-plugin-jsdoc": "^1.3.0",
+    "typescript": "^5.4.5"
   }
 }
