--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:@typescript-eslint/stylistic"
+    "plugin:@typescript-eslint/stylistic",
   ],
   "parser": "@typescript-eslint/parser",
   "plugins": ["prettier"],
@@ -12,6 +12,6 @@
     "prettier/prettier": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
-    "@typescript-eslint/consistent-type-imports": "error"
-  }
+    "@typescript-eslint/consistent-type-imports": "error",
+  },
 }
