add icite, refactor logging

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,14 +3,7 @@
     "@ianvs/prettier-plugin-sort-imports",
     "./node_modules/prettier-plugin-jsdoc/dist/index.js"
   ],
-  "importOrder": [
-    "^[a-zA-Z]",
-    "^@[a-zA-Z]",
-    "^@/",
-    "^/",
-    "^./",
-    "^../"
-  ],
+  "importOrder": ["^[a-zA-Z]", "^@[a-zA-Z]", "^@/", "^."],
   "jsdocCapitalizeDescription": false,
   "htmlWhitespaceSensitivity": "strict"
 }
