--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@tsconfig/node22": "^22.0.0",
     "@types/better-sqlite3": "^7.6.10",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.2",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
-    "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
+    "eslint": "^8.57.0",
     "prettier-plugin-jsdoc": "^1.3.0",
+    "prettier": "^3.3.2",
     "tsc": "^2.0.4",
     "typescript": "^5.4.5"
   }
