--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "vue-tsc && vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf node_modules yarn.lock && yarn cache clean && yarn install"
   },
   "dependencies": {
     "echarts": "^5.5.0",
@@ -26,7 +27,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "typescript": "^5.5.0",
+    "typescript": "^5.4.0",
     "vite": "^5.2.13",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.0.21"
