--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,12 @@
 {
   "type": "module",
   "scripts": {
-    "build": "vue-tsc && vite build",
     "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "lint": "FIX=true ./lint.sh",
+    "test:lint": "./lint.sh",
+    "test:types": "tsc --noemit",
+    "test": "yarn test:lint && yarn test:types",
     "preview": "vite preview",
     "clean": "rm -rf node_modules yarn.lock && yarn cache clean && yarn install"
   },
@@ -19,6 +23,7 @@
     "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
