--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,2 @@
-VITE_TITLE="CFDE Metrics"
+VITE_TITLE="CFDE Evaluation"
 VITE_DESCRIPTION="Metrics for evaluating NIH Common Fund Data Ecosystem projects"
