table comp, proj page, style improv

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,2 @@
-VITE_TITLE="CFDE Evaluation Core Dashboard"
+VITE_TITLE="CFDE Evaluation Core"
 VITE_DESCRIPTION="Evaluation Core dashboard to support the NIH Common Fund Data Ecosystem"
