--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: "22"
           cache: yarn
+          cache-dependency-path:
+            - "app/yarn.lock"
+            - "data/yarn.lock"
 
       - name: Install /data packages
         run: yarn install
