--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,9 +19,9 @@ jobs:
         with:
           node-version: "22"
           cache: yarn
-          cache-dependency-path:
-            - "app/yarn.lock"
-            - "data/yarn.lock"
+          cache-dependency-path: |
+            app/yarn.lock"
+            "data/yarn.lock"
 
       - name: Install /data packages
         run: yarn install
