--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  tests:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,18 +23,8 @@ jobs:
             app/yarn.lock
             data/yarn.lock
 
-      - name: Install /data packages
-        run: yarn install
-        working-directory: ./data
+      - name: Install packages
+        run: ./run.sh --install
 
-      - name: Run /data tests
-        run: yarn test
-        working-directory: ./data
-
-      - name: Install /app packages
-        run: yarn install
-        working-directory: ./app
-
-      - name: Run /app tests
-        run: yarn test
-        working-directory: ./app
+      - name: Run tests
+        run: ./run.sh --test
