--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "extends": ["@vue/tsconfig/tsconfig.json"],
   "compilerOptions": {
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
     /* Bundler mode */
