--- a/app/src/data/core-projects.json
+++ b/app/src/data/core-projects.json
@@ -1,5 +1,8 @@
 {
   "R03OD034502": {
+    "id": "R03OD034502",
+    "name": "Data-driven search of Common Fund data sets for better discoverability and novel meta-analysis",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034502-01"
     ],
@@ -7,6 +10,9 @@
     "publications": 0
   },
   "OT2OD030161": {
+    "id": "OT2OD030161",
+    "name": "GTEx engagement with the CFDE-CC and other DCCs towards building a data ecosystem spanning the Common Fund projects",
+    "activity_code": "OT2",
     "projects": [
       "3OT2OD030161-01S2",
       "3OT2OD030161-01S1",
@@ -18,6 +24,9 @@
     "publications": 1
   },
   "R03OD034494": {
+    "id": "R03OD034494",
+    "name": "Using Common Fund datasets for prioritization of disease-associated genetic variants",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034494-01"
     ],
@@ -25,18 +34,24 @@
     "publications": 1
   },
   "OT2OD030545": {
+    "id": "OT2OD030545",
+    "name": "Amplifying the Value of HuBMAP Data Through Data Interoperability and Collaboration",
+    "activity_code": "OT2",
     "projects": [
       "1OT2OD030545-01",
       "3OT2OD030545-01S3",
       "3OT2OD030545-01S4",
-      "3OT2OD030545-01S2",
       "3OT2OD030545-01S1",
+      "3OT2OD030545-01S2",
       "3OT2OD030545-01S5"
     ],
     "award_amount": 3089131,
     "publications": 4
   },
   "R03OD030596": {
+    "id": "R03OD030596",
+    "name": "Large-scale annotation-free disease correlation analysis of the iHMP",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030596-01"
     ],
@@ -44,6 +59,9 @@
     "publications": 0
   },
   "R03OD032629": {
+    "id": "R03OD032629",
+    "name": "Durable Common Fund Data Interfaces and Tutorials with Bioconductor",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032629-01"
     ],
@@ -51,6 +69,9 @@
     "publications": 0
   },
   "U54OD036472": {
+    "id": "U54OD036472",
+    "name": "CONNECT: Collaborative Network for Nurturing Ecosystems of Common Fund Team Science",
+    "activity_code": "U54",
     "projects": [
       "1U54OD036472-01"
     ],
@@ -58,6 +79,9 @@
     "publications": 1
   },
   "R03OD036494": {
+    "id": "R03OD036494",
+    "name": "In silico screening for immune surveillance adaptation in cancer using Common Fund data resources",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036494-01"
     ],
@@ -65,6 +89,9 @@
     "publications": 2
   },
   "R03OD032625": {
+    "id": "R03OD032625",
+    "name": "Unraveling the topological architecture and phenotypic contexture of structural variation",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032625-01"
     ],
@@ -72,6 +99,9 @@
     "publications": 0
   },
   "R03OD034499": {
+    "id": "R03OD034499",
+    "name": "Deciphering the 3D genome of pediatric brain tumors",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034499-01"
     ],
@@ -79,6 +109,9 @@
     "publications": 3
   },
   "R03OD034493": {
+    "id": "R03OD034493",
+    "name": "Cross Repository Metabolomics Data and Workflow Integration",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034493-01"
     ],
@@ -86,6 +119,9 @@
     "publications": 2
   },
   "R03OD034495": {
+    "id": "R03OD034495",
+    "name": "Functional Annotation of Glycan Motifs using Common-Fund Data Resources",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034495-01"
     ],
@@ -93,6 +129,9 @@
     "publications": 0
   },
   "R03OD036493": {
+    "id": "R03OD036493",
+    "name": "Meta-Analysis of Metabolic Determinants of Exercise Response in Common Funds Data",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036493-01"
     ],
@@ -100,6 +139,9 @@
     "publications": 0
   },
   "R03OD034497": {
+    "id": "R03OD034497",
+    "name": "Integrating metagenomics data into accurate mass stool metabolite identifications",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034497-01"
     ],
@@ -107,6 +149,9 @@
     "publications": 3
   },
   "OT2OD036440": {
+    "id": "OT2OD036440",
+    "name": "The Common Fund Knowledge Center (CFKC): providing scientifically valid knowledge from the Common Fund Data Ecosystem to a diverse biomedical research community.",
+    "activity_code": "OT2",
     "projects": [
       "1OT2OD036440-01"
     ],
@@ -114,6 +159,9 @@
     "publications": 0
   },
   "R03OD036497": {
+    "id": "R03OD036497",
+    "name": "Identification of blood biomarkers predictive of organ aging",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036497-01"
     ],
@@ -121,6 +169,9 @@
     "publications": 0
   },
   "R03OD036489": {
+    "id": "R03OD036489",
+    "name": "Leveraging multiple Common Fund datasets to rank cell-cell interactions for faster hypothesis generation",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036489-01"
     ],
@@ -128,6 +179,9 @@
     "publications": 0
   },
   "R03OD036491": {
+    "id": "R03OD036491",
+    "name": "Delineating the functional impact of recurrent repeat expansions in ALS using integrative multiomic analysis",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036491-01"
     ],
@@ -135,6 +189,9 @@
     "publications": 0
   },
   "R03OD036490": {
+    "id": "R03OD036490",
+    "name": "Using Common Fund Datasets to Illuminate Drug-Microbial Interactions",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036490-01"
     ],
@@ -142,6 +199,9 @@
     "publications": 0
   },
   "R03OD030601": {
+    "id": "R03OD030601",
+    "name": "Using machine learning techniques to characterize the Metabolomics Workbench Dataset",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030601-01"
     ],
@@ -149,6 +209,9 @@
     "publications": 0
   },
   "OT2OD030164": {
+    "id": "OT2OD030164",
+    "name": "Cross-CFDE semantic and spatial interoperability for anatomy",
+    "activity_code": "OT2",
     "projects": [
       "1OT2OD030164-01"
     ],
@@ -156,6 +219,9 @@
     "publications": 0
   },
   "R03OD030605": {
+    "id": "R03OD030605",
+    "name": "Incorporating Analysis of Gene Paralog Variation Into Existing Genomics Datasets",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030605-01"
     ],
@@ -163,16 +229,22 @@
     "publications": 0
   },
   "OT2OD030546": {
+    "id": "OT2OD030546",
+    "name": "Illuminating the Druggable Genome Data Coordinating Center - Engagement Plan with the CFDE",
+    "activity_code": "OT2",
     "projects": [
       "3OT2OD030546-01S2",
-      "3OT2OD030546-01S1",
       "1OT2OD030546-01",
+      "3OT2OD030546-01S1",
       "3OT2OD030546-01S3"
     ],
     "award_amount": 2160622,
     "publications": 3
   },
   "R03OD030604": {
+    "id": "R03OD030604",
+    "name": "Using Common Fund data to inform rare disease preclinical models and prioritize drug repurposing",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030604-01"
     ],
@@ -180,6 +252,9 @@
     "publications": 8
   },
   "R03OD032666": {
+    "id": "R03OD032666",
+    "name": "Investigating systems physiology with multi-omics data",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032666-01"
     ],
@@ -187,13 +262,19 @@
     "publications": 4
   },
   "R03OD034496": {
+    "id": "R03OD034496",
+    "name": "Uncovering therapeutic-associated biomarkers via machine learning and feature engineering approaches",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034496-01"
     ],
     "award_amount": 318000,
-    "publications": 4
+    "publications": 5
   },
   "R03OD036492": {
+    "id": "R03OD036492",
+    "name": "Predicting 3D physical gene-enhancer interactions through integration of GTEx and 4DN data",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036492-01"
     ],
@@ -201,6 +282,9 @@
     "publications": 0
   },
   "R03OD032628": {
+    "id": "R03OD032628",
+    "name": "Constructing High-Resolution Ensemble Models of 3D Single-Cell Chromatin Conformations of eQTL Loci from Integrated Analysis of 4DN-GTEx Data towards Structural Basis of Differential Gene Expression",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032628-01"
     ],
@@ -208,6 +292,9 @@
     "publications": 0
   },
   "R03OD032630": {
+    "id": "R03OD032630",
+    "name": "Methods to maximize the utility of common fund functional genomic data in multi-ethnic genetic studies",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032630-01"
     ],
@@ -215,6 +302,9 @@
     "publications": 8
   },
   "R03OD030599": {
+    "id": "R03OD030599",
+    "name": "A database for high-resolution chromatin contact maps and human genetic variants",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030599-01"
     ],
@@ -222,6 +312,9 @@
     "publications": 1
   },
   "R03OD034500": {
+    "id": "R03OD034500",
+    "name": "Allele-specific analysis of human epigenome, transcriptome and high-resolution chromatin organization",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034500-01"
     ],
@@ -229,6 +322,9 @@
     "publications": 0
   },
   "OT2OD030160": {
+    "id": "OT2OD030160",
+    "name": "The LINCS DCIC Engagement Plan with the CFDE",
+    "activity_code": "OT2",
     "projects": [
       "1OT2OD030160-01",
       "3OT2OD030160-01S2",
@@ -237,16 +333,22 @@
       "3OT2OD030160-01S4"
     ],
     "award_amount": 3120175,
-    "publications": 15
+    "publications": 13
   },
   "OT2OD036435": {
+    "id": "OT2OD036435",
+    "name": "The CFDE Workbench",
+    "activity_code": "OT2",
     "projects": [
       "1OT2OD036435-01"
     ],
     "award_amount": 1500000,
-    "publications": 2
+    "publications": 5
   },
   "R03OD032627": {
+    "id": "R03OD032627",
+    "name": "Deep Phenotyping of 3D Data for Candidate Gene Selection from Kids First Studies",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032627-01"
     ],
@@ -254,6 +356,9 @@
     "publications": 1
   },
   "R03OD032626": {
+    "id": "R03OD032626",
+    "name": "Using phosphorylation signatures of drug perturbagens to identify exercise-mimetic compounds",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032626-01"
     ],
@@ -261,24 +366,33 @@
     "publications": 1
   },
   "OT2OD032619": {
+    "id": "OT2OD032619",
+    "name": "SPARC Engagement Plan with the Common Fund Data Ecosystem",
+    "activity_code": "OT2",
     "projects": [
       "1OT2OD032619-01",
       "3OT2OD032619-01S2",
       "3OT2OD032619-01S1"
     ],
     "award_amount": 2577565,
-    "publications": 1
+    "publications": 0
   },
   "OT2OD032092": {
+    "id": "OT2OD032092",
+    "name": "Harmonization of GlyGen glycoconjugate and glycan array data for integration into CFDE",
+    "activity_code": "OT2",
     "projects": [
-      "3OT2OD032092-01S2",
       "1OT2OD032092-01",
+      "3OT2OD032092-01S2",
       "3OT2OD032092-01S1"
     ],
     "award_amount": 2401621,
     "publications": 0
   },
   "OT2OD030547": {
+    "id": "OT2OD030547",
+    "name": "GENOMIC INDEXING OF COMMON FUND DATASETS",
+    "activity_code": "OT2",
     "projects": [
       "1OT2OD030547-01",
       "3OT2OD030547-01S3",
@@ -286,9 +400,12 @@
       "3OT2OD030547-01S2"
     ],
     "award_amount": 2859207,
-    "publications": 0
+    "publications": 1
   },
   "R03OD036496": {
+    "id": "R03OD036496",
+    "name": "Evaluating the utility of cis-regulatory element graphs for modeling gene regulation",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036496-01"
     ],
@@ -296,6 +413,9 @@
     "publications": 0
   },
   "R03OD030603": {
+    "id": "R03OD030603",
+    "name": "Improving Deposition Quality and FAIRness of Metabolomics Workbench",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030603-01"
     ],
@@ -303,6 +423,9 @@
     "publications": 2
   },
   "R03OD032622": {
+    "id": "R03OD032622",
+    "name": "Interrogation and Interpretation of Common Fund Data Sets to Identify Novel Ocular Disease Genes",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032622-01"
     ],
@@ -310,6 +433,9 @@
     "publications": 3
   },
   "R03OD032624": {
+    "id": "R03OD032624",
+    "name": "Using Common Fund datasets for xenobiotic localization",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032624-01"
     ],
@@ -317,6 +443,9 @@
     "publications": 11
   },
   "OT2OD032119": {
+    "id": "OT2OD032119",
+    "name": "Interoperability and Collaboration with the Common Fund Data Ecosystem to Improve Utility of 4DN Data",
+    "activity_code": "OT2",
     "projects": [
       "3OT2OD032119-01S1",
       "1OT2OD032119-01",
@@ -326,6 +455,9 @@
     "publications": 0
   },
   "OT2OD030162": {
+    "id": "OT2OD030162",
+    "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
+    "activity_code": "OT2",
     "projects": [
       "3OT2OD030162-01S1",
       "3OT2OD030162-01S3",
@@ -337,6 +469,9 @@
     "publications": 1
   },
   "R03OD036498": {
+    "id": "R03OD036498",
+    "name": "Discovery of neoepitope immunotherapeutic targets in diffuse pediatric high-grade gliomas",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036498-01"
     ],
@@ -344,6 +479,9 @@
     "publications": 0
   },
   "R03OD030598": {
+    "id": "R03OD030598",
+    "name": "Using GTEx to assess the functionality of sex-biased variants",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030598-01"
     ],
@@ -351,16 +489,22 @@
     "publications": 1
   },
   "OT2OD030544": {
+    "id": "OT2OD030544",
+    "name": "Biomedical Data Commons Workbench (BDCW)",
+    "activity_code": "OT2",
     "projects": [
+      "1OT2OD030544-01",
       "3OT2OD030544-01S3",
       "3OT2OD030544-01S1",
-      "1OT2OD030544-01",
       "3OT2OD030544-01S2"
     ],
     "award_amount": 2930832,
-    "publications": 26
+    "publications": 27
   },
   "R03OD030600": {
+    "id": "R03OD030600",
+    "name": "Leveraging Common Fund data for feature selection in Kids First studies.",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030600-01"
     ],
@@ -368,6 +512,9 @@
     "publications": 0
   },
   "R03OD034501": {
+    "id": "R03OD034501",
+    "name": "Integration of GTEx and HuBMAP data to gain population-level cell-type-specific insights",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034501-01"
     ],
@@ -375,6 +522,9 @@
     "publications": 4
   },
   "R03OD030608": {
+    "id": "R03OD030608",
+    "name": "Constructing multi-omics regulatory networks for functional variant annotation",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030608-01"
     ],
@@ -382,6 +532,9 @@
     "publications": 3
   },
   "R03OD030597": {
+    "id": "R03OD030597",
+    "name": "Expanding the List of Human Disease Genes Using the Knockout Mouse Phenotyping Program (KOMP2) Data to Reassess Human Clinical Data",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030597-01"
     ],
@@ -389,6 +542,9 @@
     "publications": 3
   },
   "R03OD036495": {
+    "id": "R03OD036495",
+    "name": "High-throughput Discovery of Novel Genome Organization Regulators",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036495-01"
     ],
@@ -396,6 +552,9 @@
     "publications": 0
   },
   "R03OD032623": {
+    "id": "R03OD032623",
+    "name": "Using three-dimensional genome structure to refine eQTL detection",
+    "activity_code": "R03",
     "projects": [
       "1R03OD032623-01"
     ],
@@ -403,6 +562,9 @@
     "publications": 1
   },
   "R03OD036499": {
+    "id": "R03OD036499",
+    "name": "Cell type harmonization of single cell data in HuBMAP and GTEx",
+    "activity_code": "R03",
     "projects": [
       "1R03OD036499-01"
     ],
@@ -410,6 +572,9 @@
     "publications": 2
   },
   "R03OD030609": {
+    "id": "R03OD030609",
+    "name": "Computational Methods to Integrate Common Fund Data for Drug Repurposing",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030609-01"
     ],
@@ -417,6 +582,9 @@
     "publications": 0
   },
   "R03OD034498": {
+    "id": "R03OD034498",
+    "name": "Integrative analysis of multi-omics data to identify and characterize long noncoding RNA-derived fusions in pediatric cancer",
+    "activity_code": "R03",
     "projects": [
       "1R03OD034498-01"
     ],
@@ -424,6 +592,9 @@
     "publications": 0
   },
   "R03OD030602": {
+    "id": "R03OD030602",
+    "name": "Use UCSC Xena to promote integration and usage of the KidsFirst, GTEx, and LINCS L1000 data sets",
+    "activity_code": "R03",
     "projects": [
       "1R03OD030602-01"
     ],
