get rid of db, simplify, refactor

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -22,7 +22,8 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "~/*": ["../data/output/*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.vue"],
