--- a/app/.eslintrc
+++ b/app/.eslintrc
@@ -12,5 +12,8 @@
   },
   "rules": {
     "prettier/prettier": "warn",
+    "prefer-const": ["error", { "destructuring": "all" }],
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"],
+    "@typescript-eslint/consistent-type-imports": "error",
   },
 }
