--- a/data/.eslintrc
+++ b/data/.eslintrc
@@ -10,7 +10,7 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "warn",
-    "@typescript-eslint/no-unused-vars": "warn",
+    "prefer-const": ["error", { "destructuring": "all" }],
     "@typescript-eslint/consistent-type-definitions": ["error", "type"],
     "@typescript-eslint/consistent-type-imports": "error",
   },
