--- a/data/package.json
+++ b/data/package.json
@@ -12,9 +12,8 @@
   },
   "dependencies": {
     "@playwright/test": "^1.44.1",
-    "better-sqlite3": "^11.0.0",
     "chalk": "^5.3.0",
-    "kysely": "^0.27.3",
+    "csv": "^6.3.9",
     "lodash-es": "^4.17.21",
     "pdfjs-dist": "^4.3.136",
     "tsx": "^4.15.7"
@@ -22,7 +21,6 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@tsconfig/node22": "^22.0.0",
-    "@types/better-sqlite3": "^7.6.10",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.7",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
