--- a/data/package.json
+++ b/data/package.json
@@ -1,35 +1,37 @@
 {
   "type": "module",
   "scripts": {
-    "install-playwright": "npx playwright install chrome",
+    "install-playwright": "playwright install chrome",
     "ingest": "tsx --env-file=.env ./ingest.ts",
     "print": "tsx --env-file=.env ./print.ts",
-    "lint": "FIX=true ./lint.sh",
-    "test:lint": "./lint.sh",
+    "lint": "eslint . --fix && prettier **/*.{ts,md} --write",
+    "test:lint": "eslint . && prettier **/*.{ts,md} --check",
     "test:types": "tsc --noemit",
     "test": "yarn test:lint && yarn test:types",
     "clean": "rm -rf node_modules yarn.lock && yarn cache clean"
   },
   "dependencies": {
-    "@playwright/test": "^1.44.1",
+    "@playwright/test": "^1.45.1",
     "chalk": "^5.3.0",
     "csv": "^6.3.9",
     "lodash-es": "^4.17.21",
-    "pdfjs-dist": "^4.3.136",
-    "tsx": "^4.15.7"
+    "pdfjs-dist": "^4.4.168",
+    "tsx": "^4.16.2"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.6.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.7",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.1",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.14.9",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "eslint": "^9.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.2",
     "prettier-plugin-jsdoc": "^1.3.0",
     "tsc": "^2.0.4",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.3"
   }
 }
