--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@tanstack/vue-table": "^8.19.2",
     "@vueuse/core": "^10.11.0",
     "echarts": "^5.5.1",
+    "javascript-time-ago": "^2.5.10",
     "lodash": "^4.17.21",
     "vue": "^3.4.31",
     "vue-echarts": "^6.7.3",
