--- a/data/raw/reporter-projects.json
+++ b/data/raw/reporter-projects.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "search_id": "I0qka6OUz0yTl7wXy4lw1w",
+    "search_id": "MVIvNOgoNUaVSyQiM4Jzmg",
     "total": 92,
     "offset": 0,
     "limit": 500,
@@ -8,7 +8,7 @@
     "sort_order": "ASC",
     "sorted_by_relevance": false,
     "properties": {
-      "URL": "https:/reporter.nih.gov/search/I0qka6OUz0yTl7wXy4lw1w/projects"
+      "URL": "https:/reporter.nih.gov/search/MVIvNOgoNUaVSyQiM4Jzmg/projects"
     }
   },
   "results": [
