--- a/data/package.json
+++ b/data/package.json
@@ -23,6 +23,7 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@octokit/graphql-schema": "^15.25.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.9",
