--- a/data/tsconfig.json
+++ b/data/tsconfig.json
@@ -8,6 +8,8 @@
     "noEmit": true,
     "noErrorTruncation": true,
     "noUncheckedIndexedAccess": true,
+    "strict": true,
+
     "paths": {
       "@/*": ["./*"]
     },
