--- a/data/package.json
+++ b/data/package.json
@@ -6,7 +6,7 @@
     "print": "tsx --env-file=.env --env-file=.env.local ./print.ts",
     "lint": "eslint . --fix && prettier **/*.{ts,md} --write",
     "test:lint": "eslint . && prettier **/*.{ts,md} --check",
-    "test:types": "tsc --noemit",
+    "test:types": "tsc",
     "test": "yarn test:lint && yarn test:types",
     "clean": "rm -rf node_modules yarn.lock && yarn cache clean"
   },
