add more documentation

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,3 @@
 VITE_TITLE="CFDE Evaluation Core"
 VITE_DESCRIPTION="Evaluation Core dashboard to support the NIH Common Fund Data Ecosystem"
+VITE_REPORTS="pdfs"
