--- a/data/raw/reporter-projects.json
+++ b/data/raw/reporter-projects.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "search_id": "DwYR-b2bWkOGfOQ73iRQqA",
+    "search_id": "FeR-PRPby02R7-lFpZMX2A",
     "total": 92,
     "offset": 0,
     "limit": 500,
@@ -8,7 +8,7 @@
     "sort_order": "ASC",
     "sorted_by_relevance": false,
     "properties": {
-      "URL": "https:/reporter.nih.gov/search/DwYR-b2bWkOGfOQ73iRQqA/projects"
+      "URL": "https:/reporter.nih.gov/search/FeR-PRPby02R7-lFpZMX2A/projects"
     }
   },
   "results": [
