--- a/data/package.json
+++ b/data/package.json
@@ -6,9 +6,9 @@
     "print": "tsx --env-file=.env --env-file=.env.local ./print.ts",
     "lint": "eslint . --fix && prettier **/*.{ts,md} --write",
     "test:lint": "eslint . && prettier **/*.{ts,md} --check",
-    "test:types": "tsc",
-    "test": "yarn test:lint && yarn test:types",
-    "clean": "rm -rf node_modules yarn.lock && yarn cache clean"
+    "test:types": "tsc --noEmit",
+    "test": "npm run test:lint && npm run test:types",
+    "clean": "rm -rf node_modules bun.lockb && bun pm cache rm"
   },
   "dependencies": {
     "@playwright/test": "^1.45.1",
@@ -33,7 +33,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.3.2",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "tsc": "^2.0.4",
     "typescript": "^5.5.3"
   }
 }
