--- a/data/package.json
+++ b/data/package.json
@@ -2,8 +2,9 @@
   "type": "module",
   "scripts": {
     "install-playwright": "playwright install chrome",
-    "ingest": "tsx --env-file=.env --env-file=.env.local ./ingest.ts",
-    "print": "tsx --env-file=.env --env-file=.env.local ./print.ts",
+    "script": "tsx --env-file=.env --env-file=.env.local",
+    "ingest": "npm run script -- ./ingest.ts",
+    "print": "npm run script -- ./print.ts",
     "lint": "eslint . --fix && prettier **/*.{ts,md} --write",
     "test:lint": "eslint . && prettier **/*.{ts,md} --check",
     "test:types": "tsc --noEmit",
@@ -11,28 +12,28 @@
     "clean": "rm -rf node_modules bun.lockb && bun pm cache rm"
   },
   "dependencies": {
-    "@playwright/test": "^1.45.1",
+    "@playwright/test": "^1.45.3",
     "chalk": "^5.3.0",
-    "csv": "^6.3.9",
+    "csv": "^6.3.10",
     "lodash-es": "^4.17.21",
     "octokit": "^4.0.2",
-    "pdfjs-dist": "^4.4.168",
+    "pdfjs-dist": "^4.5.136",
     "tsx": "^4.16.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.6.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.3.0",
+    "@eslint/js": "^9.8.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.3.1",
     "@octokit/graphql-schema": "^15.25.0",
     "@tsconfig/node22": "^22.0.0",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.9",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "eslint": "^9.6.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.2",
+    "@types/node": "^22.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "prettier-plugin-jsdoc": "^1.3.0",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4"
   }
 }
