--- a/data/package.json
+++ b/data/package.json
@@ -16,8 +16,10 @@
     "chalk": "^5.3.0",
     "csv": "^6.3.10",
     "lodash-es": "^4.17.21",
+    "nodejs-file-downloader": "^4.13.0",
     "octokit": "^4.0.2",
     "pdfjs-dist": "^4.5.136",
+    "strip-ansi": "^7.1.0",
     "tsx": "^4.16.2"
   },
   "devDependencies": {
