--- a/data/package.json
+++ b/data/package.json
@@ -18,6 +18,7 @@
     "lodash-es": "^4.17.21",
     "nodejs-file-downloader": "^4.13.0",
     "octokit": "^4.0.2",
+    "p-limit": "^6.1.0",
     "pdfjs-dist": "^4.5.136",
     "strip-ansi": "^7.1.0",
     "tsx": "^4.16.2"
