--- a/data/raw/reporter-projects.json
+++ b/data/raw/reporter-projects.json
@@ -1,6 +1,6 @@
 {
   "meta": {
-    "search_id": "jVm-1DoqWkiSzcJMt_uh-Q",
+    "search_id": "8jVHUdlINUeXkVskhxn7Uw",
     "total": 92,
     "offset": 0,
     "limit": 500,
@@ -8,7 +8,7 @@
     "sort_order": "ASC",
     "sorted_by_relevance": false,
     "properties": {
-      "URL": "https:/reporter.nih.gov/search/jVm-1DoqWkiSzcJMt_uh-Q/projects"
+      "URL": "https:/reporter.nih.gov/search/8jVHUdlINUeXkVskhxn7Uw/projects"
     }
   },
   "results": [
