--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -19,6 +19,7 @@
     /* Linting */
     "strict": true,
     "noUncheckedIndexedAccess": true,
+    "verbatimModuleSyntax": true,
 
     "paths": {
       "@/*": ["./src/*"],
