get list of ga properties

--- a/data/.env
+++ b/data/.env
@@ -2,3 +2,4 @@ RAW_PATH=./raw
 OUTPUT_PATH=./output
 APP_PATH=../app
 PDF_PATH=../app/public/pdfs
+GOOGLE_APPLICATION_CREDENTIALS=../ga-credentials.json
