--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-css-order": "^2.1.2",
     "prettier-plugin-jsdoc": "^1.3.0",
+    "type-fest": "^4.25.0",
     "typescript": "^5.5.4",
     "vite": "^5.3.5",
     "vite-svg-loader": "^5.1.0",
