--- a/data/package.json
+++ b/data/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
     "prettier-plugin-jsdoc": "^1.3.0",
+    "type-fest": "^4.25.0",
     "typescript": "^5.5.4"
   }
 }
