add over time analytics

--- a/data/output/core-projects.json
+++ b/data/output/core-projects.json
@@ -8,7 +8,8 @@
     ],
     "award_amount": 312973,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 1
   },
   {
     "id": "OT2OD030161",
@@ -17,13 +18,14 @@
     "projects": [
       "3OT2OD030161-01S2",
       "3OT2OD030161-01S1",
-      "1OT2OD030161-01",
       "3OT2OD030161-01S3",
+      "1OT2OD030161-01",
       "3OT2OD030161-01S4"
     ],
     "award_amount": 2855641,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034494",
@@ -34,7 +36,8 @@
     ],
     "award_amount": 366000,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD030545",
@@ -42,15 +45,16 @@
     "activity_code": "OT2",
     "projects": [
       "1OT2OD030545-01",
-      "3OT2OD030545-01S4",
       "3OT2OD030545-01S3",
-      "3OT2OD030545-01S1",
+      "3OT2OD030545-01S4",
       "3OT2OD030545-01S2",
+      "3OT2OD030545-01S1",
       "3OT2OD030545-01S5"
     ],
     "award_amount": 3089131,
     "publications": 4,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030596",
@@ -61,7 +65,8 @@
     ],
     "award_amount": 304918,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032629",
@@ -72,7 +77,8 @@
     ],
     "award_amount": 377050,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "U54OD036472",
@@ -83,7 +89,8 @@
     ],
     "award_amount": 1480657,
     "publications": 1,
-    "repos": 2
+    "repos": 2,
+    "analytics": 0
   },
   {
     "id": "R03OD036494",
@@ -94,7 +101,8 @@
     ],
     "award_amount": 318000,
     "publications": 2,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032625",
@@ -105,7 +113,8 @@
     ],
     "award_amount": 297031,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034499",
@@ -116,7 +125,8 @@
     ],
     "award_amount": 391151,
     "publications": 3,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034493",
@@ -127,7 +137,8 @@
     ],
     "award_amount": 302764,
     "publications": 3,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034495",
@@ -138,7 +149,8 @@
     ],
     "award_amount": 312000,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036493",
@@ -149,7 +161,8 @@
     ],
     "award_amount": 296510,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034497",
@@ -159,8 +172,9 @@
       "1R03OD034497-01"
     ],
     "award_amount": 319166,
-    "publications": 3,
-    "repos": 0
+    "publications": 4,
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD036440",
@@ -171,7 +185,8 @@
     ],
     "award_amount": 1473390,
     "publications": 2,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036497",
@@ -182,7 +197,8 @@
     ],
     "award_amount": 388000,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036489",
@@ -193,7 +209,8 @@
     ],
     "award_amount": 237411,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036491",
@@ -204,7 +221,8 @@
     ],
     "award_amount": 323817,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036490",
@@ -215,7 +233,8 @@
     ],
     "award_amount": 300676,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030601",
@@ -226,7 +245,8 @@
     ],
     "award_amount": 263120,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD030164",
@@ -237,7 +257,8 @@
     ],
     "award_amount": 494117,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030605",
@@ -248,7 +269,8 @@
     ],
     "award_amount": 312000,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD030546",
@@ -262,7 +284,8 @@
     ],
     "award_amount": 2160622,
     "publications": 3,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030604",
@@ -273,7 +296,8 @@
     ],
     "award_amount": 297000,
     "publications": 8,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032666",
@@ -284,7 +308,8 @@
     ],
     "award_amount": 311000,
     "publications": 4,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034496",
@@ -295,7 +320,8 @@
     ],
     "award_amount": 318000,
     "publications": 5,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036492",
@@ -306,7 +332,8 @@
     ],
     "award_amount": 298222,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032628",
@@ -317,7 +344,8 @@
     ],
     "award_amount": 309427,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032630",
@@ -328,7 +356,8 @@
     ],
     "award_amount": 335407,
     "publications": 8,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030599",
@@ -339,7 +368,8 @@
     ],
     "award_amount": 265495,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034500",
@@ -350,22 +380,24 @@
     ],
     "award_amount": 279992,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD030160",
     "name": "The LINCS DCIC Engagement Plan with the CFDE",
     "activity_code": "OT2",
     "projects": [
-      "1OT2OD030160-01",
       "3OT2OD030160-01S2",
-      "3OT2OD030160-01S1",
+      "1OT2OD030160-01",
       "3OT2OD030160-01S3",
+      "3OT2OD030160-01S1",
       "3OT2OD030160-01S4"
     ],
     "award_amount": 3120175,
     "publications": 13,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD036435",
@@ -376,7 +408,8 @@
     ],
     "award_amount": 1500000,
     "publications": 5,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032627",
@@ -387,7 +420,8 @@
     ],
     "award_amount": 329875,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032626",
@@ -398,7 +432,8 @@
     ],
     "award_amount": 298188,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD032619",
@@ -411,7 +446,8 @@
     ],
     "award_amount": 2577565,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD032092",
@@ -424,7 +460,8 @@
     ],
     "award_amount": 2401621,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD030547",
@@ -438,7 +475,8 @@
     ],
     "award_amount": 2859207,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036496",
@@ -449,7 +487,8 @@
     ],
     "award_amount": 334685,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030603",
@@ -460,7 +499,8 @@
     ],
     "award_amount": 302804,
     "publications": 2,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032622",
@@ -471,7 +511,8 @@
     ],
     "award_amount": 314833,
     "publications": 3,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032624",
@@ -482,7 +523,8 @@
     ],
     "award_amount": 304000,
     "publications": 11,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD032119",
@@ -495,22 +537,24 @@
     ],
     "award_amount": 1300851,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD030162",
     "name": "Kids First Data Resource Center (KFDRC): Harnessing Data-Driven Opportunities in the Present on behalf of the Future of Common Fund Data Ecosystem (CFDE)",
     "activity_code": "OT2",
     "projects": [
-      "3OT2OD030162-01S1",
       "3OT2OD030162-01S3",
+      "3OT2OD030162-01S1",
       "3OT2OD030162-01S2",
       "1OT2OD030162-01",
       "3OT2OD030162-01S4"
     ],
     "award_amount": 10063836,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036498",
@@ -521,7 +565,8 @@
     ],
     "award_amount": 356000,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030598",
@@ -532,7 +577,8 @@
     ],
     "award_amount": 228293,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "OT2OD030544",
@@ -545,8 +591,9 @@
       "3OT2OD030544-01S2"
     ],
     "award_amount": 2930832,
-    "publications": 29,
-    "repos": 0
+    "publications": 31,
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030600",
@@ -557,7 +604,8 @@
     ],
     "award_amount": 363306,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034501",
@@ -568,7 +616,8 @@
     ],
     "award_amount": 314739,
     "publications": 4,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030608",
@@ -579,7 +628,8 @@
     ],
     "award_amount": 335000,
     "publications": 3,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030597",
@@ -590,7 +640,8 @@
     ],
     "award_amount": 320000,
     "publications": 3,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036495",
@@ -601,7 +652,8 @@
     ],
     "award_amount": 292728,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD032623",
@@ -612,7 +664,8 @@
     ],
     "award_amount": 335000,
     "publications": 1,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD036499",
@@ -623,7 +676,8 @@
     ],
     "award_amount": 390000,
     "publications": 2,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030609",
@@ -634,7 +688,8 @@
     ],
     "award_amount": 335000,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD034498",
@@ -645,7 +700,8 @@
     ],
     "award_amount": 334926,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   },
   {
     "id": "R03OD030602",
@@ -656,6 +712,7 @@
     ],
     "award_amount": 308000,
     "publications": 0,
-    "repos": 0
+    "repos": 0,
+    "analytics": 0
   }
 ]
