--- a/data/package.json
+++ b/data/package.json
@@ -17,6 +17,7 @@
     "@playwright/test": "^1.45.3",
     "chalk": "^5.3.0",
     "csv": "^6.3.10",
+    "date-fns": "^3.6.0",
     "lodash-es": "^4.17.21",
     "nodejs-file-downloader": "^4.13.0",
     "octokit": "^4.0.2",
