--- a/data/.env
+++ b/data/.env
@@ -3,3 +3,4 @@ OUTPUT_PATH=./output
 APP_PATH=../app
 PDF_PATH=../app/public/pdfs
 GOOGLE_APPLICATION_CREDENTIALS=../ga-credentials.json
+CACHE=true
