--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,13 +15,21 @@ jobs:
         if: runner.debug == '1'
         uses: mxschmitt/action-tmate@v3
 
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
+
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
       - name: Install packages
-        run: ./run.sh --install
+        run: ./run.sh --install-packages
+
+      - name: Install Playwright
+        uses: ./.github/actions/install-playwright
 
       - name: Run tests
         run: ./run.sh --test
