--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,36 +2,63 @@ name: Run pipeline
 
 on:
   workflow_dispatch:
+    inputs:
+      cache:
+        type: boolean
+        description: Use cache (files in /raw)
+        default: false
 
 jobs:
   pipeline:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Debug dump
+        uses: crazy-max/ghaction-dump-context@v2
+
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: SSH debug
-        if: runner.debug == '1'
-        uses: mxschmitt/action-tmate@v3
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22.x
 
       - name: Set up Bun
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
 
+      - name: SSH debug
+        if: runner.debug == '1'
+        uses: mxschmitt/action-tmate@v3
+
       - name: Install packages
         run: ./run.sh --install
 
+      - name: Install Playwright
+        uses: ./.github/actions/install-playwright
+
       - name: Google auth
-        uses: "google-github-actions/auth@v2"
+        uses: google-github-actions/auth@v2
         with:
-          credentials_json: "${{ secrets.AUTH_GOOGLE }}"
+          credentials_json: ${{ secrets.AUTH_GOOGLE }}
 
       - name: Run pipeline
-        run: ./run.sh
+        run: |
+          touch data/.env.local
+          ./run.sh
+        env:
+          AUTH_GITHUB: ${{ secrets.AUTH_GITHUB }}
+          CACHE: ${{ inputs.cache && 'true' || '' }}
 
-      - name: Commit results
-        uses: stefanzweifel/git-auto-commit-action@v4
+      # - name: Commit results
+      #   uses: stefanzweifel/git-auto-commit-action@v5
+      #   with:
+      #     commit_message: Update compiled data
+
+      - name: Open pull request
+        uses: peter-evans/create-pull-request@v6
         with:
-          commit_message: "Update compiled data"
+          branch: update-data
+          title: Update compiled data
