--- a/data/package.json
+++ b/data/package.json
@@ -44,5 +44,8 @@
     "prettier-plugin-jsdoc": "^1.3.0",
     "type-fest": "^4.25.0",
     "typescript": "^5.5.4"
+  },
+  "overrides": {
+    "canvas": "../_EXCLUDED_"
   }
 }
